# prog-paralela

./: Img.txt  Open mp.txt
01. fractal-julia/: CMakeLists.txt  fractal_openmp.cpp  fractal_openmp.h  fractal_serial.cpp  fractal_serial.h  fractal_simd.cpp  fractal_simd.h  main.cpp
02.fractal-java/: build.gradle.kts  settings.gradle.kts
02.fractal-java/gradle/wrapper/: gradle-wrapper.properties
02.fractal-java/src/main/java/com/programacion/paralela/: FPSCounter.java  FractalCpu.java  FractalDll.java  FractalMain.java  FractalParallel.java  FractalParams.java  FractalSimd.java
03.fractal-dll/: CMakeLists.txt  comandos.txt  fractal_simd.cpp  fractal_simd.h  palette.cpp  palette.h
04.ejemplo-openmp/: CMakeLists.txt  main.cpp
05.ejemplo-mpi/: CMakeLists.txt  deber_mpi.cpp  main.cpp  matrices_mult.cpp  notas.txt
06.fractal-mpi/: fractal_mpi.cpp  main.cpp  palette.cpp
07.cuda/: CMakeLists.txt  kernel.cu  main.cpp
08.fractal-cuda/: CMakeLists.txt  kernel.cu  main.cpp  palette.cpp  palette.h
Varios/: notas.txt
Varios/correcciones-examenes/examen-Burning-Ship/: CMakeLists.txt  draw_text.cpp  fractal_mpi.cpp  fractal_mpi.h  main.cpp  notas  palette.h
Varios/correcciones-examenes/examen-Newton/: CMakeLists.txt  arial_ttf.h  draw_text.h  fractal_mpi.cpp  fractal_mpi.h  main.cpp  notas
Varios/deber_mpi/: notas.txt
Varios/deber_mpi_colectivo/: deber_mpi_colectivo.cpp
Varios/practica-escala-grises/: filtro_openmp.cpp  filtro_simd.cpp  filtros.h  main.cpp
Varios/practica-matematica-numerica/: main.cpp  producto_escalar.h  producto_escalar_openmp.cpp  producto_escalar_simd.cpp  suma_vector_peso.h  suma_vector_peso_simd.cpp
Varios/practica_mpi/: frecuencias_sincronico.cpp  gris_colectivo.cpp  gris_colectivo_sin.txt  notas.txt  practica_colectivo_padding.cpp  practica_sincronico_padding.cpp
deber_mpi/: CMakeLists.txt  deber_mpi.cpp
deber_mpi_colectivo/: CMakeLists.txt  notas.txt
practica-escala-grises/: CMakeLists.txt
practica-matematica-numerica/: CMakeLists.txt  producto_escalar_serial.cpp  suma_vector_peso_openmp.cpp
practica_mpi/: CMakeLists.txt  frecuencias_colectivo.cpp  notas.txt
